# stage_exo1

exo1/shapes/: README.md  pyproject.toml  setup.py
exo1/shapes/package.egg-info/: PKG-INFO  SOURCES.txt
exo1/shapes/src/: pyproject.toml  shapes.py  test.py  use_example.py
exo1/shapes/src/shapes_package/: shapes.py  test.py  use_example.py
