# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[project]
name = "shapes"
version = "1.0.0"
dependencies = [
   "pytest"
]
requires-python = ">=3.11"
authors = [
  {name = "Kanounnikoff Martin", email = "mkanounnikoff@gmail.com"}
]
maintainers = [
  {name = "Kanounnikoff Martin", email = "mkanounnikoff@gmail.com"}
]
description = "A package to describe some shapes"
readme = "README.md"
keywords = ["shape", "circle", "triangle", "rectangle", "square"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
